# spectre

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.memsearch/memory/: 2026-02-13.md
agents/: analyst.md  codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  coder.md  independent-review-engineer.md  reviewer.md  tdd-agent.md  test-lead.md  tester.md
cli/: __init__.py  build.py  main.py  notify.py  setup.py
cli/command/: __init__.py
cli/shared/: __init__.py  config.py  discovery.py  output.py
cli/subagent/: __init__.py  runner.py
commands/: architecture_review.md  clean.md  code_review.md  create_plan.md  create_tasks.md  create_test_guide.md  document.md  evaluate.md  execute.md  forget.md  handoff.md  kickoff.md  plan.md  quick_dev.md  rebase.md  research.md  scope.md  spectre.md  spectre_plan.md  tdd.md  test.md  validate.md
deprecated/: spectre.md  spectre_plan.md  sweep.md
hooks/: hooks.json
hooks/scripts/: format-resume-context.py  handoff-resume.py  session-resume-hook.sh  test_handoff_resume.py
integrations/claude-code/: plugin.json
plugins/learn/: plugin.json
plugins/sesh/: plugin.json
plugins/session-memory/: plugin.json
plugins/sparks/: plugin.json
plugins/spectre/: plugin.json
references/: next_steps_guide.md
scripts/: release.js
skills/learn/: SKILL.md
skills/spectre/: SKILL.md
skills/spectre_agent_tools/: SKILL.md
templates/: agent.md  command.md
test_build_loop/: farewell.py  tasks.md
(+94 files in other folders)
