[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectre-cli"
version = "0.1.0"
description = "Spectre Build CLI - Execute Claude in a loop, one task per iteration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Joe Fernandez"}
]

[project.scripts]
spectre = "cli.main:main"
spectre-build = "cli.build:main"

[tool.setuptools.packages.find]
include = ["cli*"]
