[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectre-cli"
version = "0.1.0"
description = "Spectre CLI - Unified CLI with build loop, subagent orchestration, slash commands, and plugin setup"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Joe Fernandez"}
]
dependencies = [
    "click>=8.0"
]

[project.scripts]
spectre = "cli.main:main"
spectre-build = "cli.build:main"

[tool.setuptools.packages.find]
include = ["cli*", "plugins*", "skills*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]
